src/test/ui/invalid-module-declaration/invalid-module-declaration.stderr
error[E0583]: file not found for module `baz`
  --> $DIR/auxiliary/foo/bar.rs:1:1
   |
LL | pub mod baz;
   | ^^^^^^^^^^^^
   |
   = help: to create the module `baz` here, create file "$DIR/auxiliary/foo/bar/baz.rs"
   = help: if there is `mod baz` elsewhere in the crate already, import it with `use crate::` instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0583`.
